--- a/index.html
+++ b/index.html
@@ -1705,7 +1705,7 @@ img{
   align-items: center;
   margin: 20px calc(100% - 1000px);
 }
-.title {
+.title{
   margin: 10px 0px;
 }
 .title h2{
@@ -2401,10 +2401,10 @@ footer .bottom-details .bottom_text{
             </div>
         </div>
         <div class="ozonedata" id="home_images">
-            <h4>22 April 2023</h4>
+            <h4>08 May 2023</h4>
             <div id="main_image">
                 <a href="https://ozonewatch.gsfc.nasa.gov/ozone_maps/">
-                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-22_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
+                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-08_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
                 </a>
             </div>
             <div id="main_image_palette">
@@ -2413,14 +2413,14 @@ footer .bottom-details .bottom_text{
             <p style="margin: 2px 10px; padding: 0px 5px;"><I>The latest false-color view of total ozone over the Antarctic pole. The purple and blue colors are where there is the least ozone, and the yellow and reds are where there is more ozone..</I></p>
             <span class="long_img">
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-21_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>21</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-20_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>20</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-19_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>19</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-07_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>07</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-06_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>06</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-05_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>05</p>
                   </span>
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-18_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>18</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-17_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>17</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-16_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>16</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-04_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>04</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-03_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>03</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-02_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>02</p>
                  </span>
             </span>
             <p style="margin: 2px 10px; padding: 0px 5px;">View the latest status of the ozone layer over the Antarctic, with a focus 
@@ -3339,7 +3339,6 @@ function mainpage(){
     p4.style.display = "none";
     p5.style.display = "none";
     f1.style.display = "block";
-    aiVisible(1);
     document.querySelector("#home").style.color = "#fff";
     document.querySelector("#about").style.color = "#0c8ff0";
     document.querySelector("#cont").style.color = "#0c8ff0";
@@ -3353,7 +3352,6 @@ function aboutpage(){
     p4.style.display = "none";
     p5.style.display = "none";
     f1.style.display = "block";
-    aiVisible(1);
     document.querySelector("#home").style.color = "#0c8ff0";
     document.querySelector("#about").style.color = "#fff";
     document.querySelector("#cont").style.color = "#0c8ff0";
@@ -3367,7 +3365,6 @@ function contactpage(){
     p4.style.display = "none";
     p5.style.display = "none";
     f1.style.display = "block";
-    aiVisible(1);
     document.querySelector("#home").style.color = "#0c8ff0";
     document.querySelector("#about").style.color = "#0c8ff0";
     document.querySelector("#cont").style.color = "#fff";
@@ -3381,7 +3378,6 @@ function myquiz(){
     p4.style.display = "block";
     p5.style.display = "none";
     f1.style.display = "none";
-    aiVisible(0);
     document.querySelector("#home").style.color = "#0c8ff0";
     document.querySelector("#about").style.color = "#0c8ff0";
     document.querySelector("#cont").style.color = "#0c8ff0";
@@ -3605,15 +3601,13 @@ new Chart("myChart", {
 function aiCall(){
 	document.getElementById("roboBtna").style.animation="aiblank 2s 1 ease-in-out";
 	document.getElementById("roboBtna").innerHTML="";
-	document.getElementById("robo-message").style.display="none";
-    document.getElementById("roboCancel").style.display="none";
   setTimeout(function onn(){
     document.getElementById("roboBtna").style.width="100vw";
     document.getElementById("roboBtna").style.height="100vh";
     document.getElementById("roboBtna").style.background="#fff";
     document.getElementById("roboBtna").style.border="0px solid #fff";
     document.getElementById("roboBtna").style.borderRadius="0%";
-    document.getElementById("roboBtna").style.position="fixed";
+    document.getElementById("roboBtna").style.position="absolute";
     document.getElementById("roboBtna").style.bottom="0px";
     document.getElementById("roboBtna").style.right="0px";
   },1900);
@@ -3621,29 +3615,12 @@ function aiCall(){
 		window.location="./devtools/envbot.html";
 	},2000);
 }
-function aiVisible(pra){
-	if(pra==0){
-		document.getElementById("roboBtna").style.display="none";
-	    document.getElementById("robo-message").style.display="none";
-        document.getElementById("roboCancel").style.display="none";
-	}else{
-		document.getElementById("roboBtna").style.display="block";
-        document.getElementById("roboCancel").style.display="block";
-	}
-}
 let robo=0;
 function roboBy(pra){
-  //if(robo==0){
     document.getElementById(`${pra}`).style.display="none";
-    //document.getElementById(`${pra}`).innerHTML=`<i class="fa fa-gear"></i>`;
     document.getElementById("roboBtna").style.display="none";
     document.getElementById("robo-message").style.display="none";
     robo=1;
-  // }else{
-  //   document.getElementById(`${pra}`).innerHTML="X";
-  //   document.getElementById("roboBtna").style.display="block";
-  //   robo=0;
-  // }
 }
 </script>
 <script>
@@ -3906,6 +3883,16 @@ function requestion(){
           "./img/user(nilam).png",
         text:
           "Thank you to send alert for heavy rain in 24 Apr 23 at my area to my phone 👍."
+      },
+      {
+        id: 11,
+        name: "Aniketh Paul",
+        job: "Bike rider",
+        rateinfo: `<i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star-half-o checked"></i><i class="fa fa-star"></i>`,
+        img:
+          "./img/user(unknown).png",
+        text:
+          "My name is Aniketh paul and i am a citizen of Bangladesh, this may and april is very deturbed of climate changing but this app is help me and my friend to take road tripes."
       }
     ];
     const img = document.getElementById("person-img");
