--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Current status of weather with Ozone history and green enviorment quiz all in one web, WHITE LOTUS" lang="en-us" name="description">
     <meta content="current weather, ozone hole, ozone, quiz, green environment quiz, white lotus, kidKrishkode" lang="en-us" name="keywords">
     <meta name="author" content="WHITE LOTUS">
-    <title version="1.4.1">Weather by WhiteLotus</title>
+    <title version="1.4.2">Weather by WhiteLotus</title>
     <link rel="icon" href="./fav-icon/roundlogo.png">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -2401,10 +2401,10 @@ footer .bottom-details .bottom_text{
             </div>
         </div>
         <div class="ozonedata" id="home_images">
-            <h4>08 May 2023</h4>
+            <h4>18 July 2023</h4>
             <div id="main_image">
                 <a href="https://ozonewatch.gsfc.nasa.gov/ozone_maps/">
-                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-08_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
+                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-18_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
                 </a>
             </div>
             <div id="main_image_palette">
@@ -2413,14 +2413,14 @@ footer .bottom-details .bottom_text{
             <p style="margin: 2px 10px; padding: 0px 5px;"><I>The latest false-color view of total ozone over the Antarctic pole. The purple and blue colors are where there is the least ozone, and the yellow and reds are where there is more ozone..</I></p>
             <span class="long_img">
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-07_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>07</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-06_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>06</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-05_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>05</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-17_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>17</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-16_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>16</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-15_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>15</p>
                   </span>
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-04_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>04</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-03_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>03</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M05/OZONE_D2023-05-02_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>02</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-14_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>14</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-13_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>13</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M07/OZONE_D2023-07-12_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>12</p>
                  </span>
             </span>
             <p style="margin: 2px 10px; padding: 0px 5px;">View the latest status of the ozone layer over the Antarctic, with a focus 
@@ -2822,7 +2822,7 @@ footer .bottom-details .bottom_text{
             </div>
             <div class="rt">
                 <div id="formbox">
-                    <form class="form-horizontal"method="POST" action="mailto:info.WhiteLotus24@gmail.com?Subject=inquary purpose"enctype="multipart/form-data">
+                    <form class="form-horizontal"method="POST" action="mailto:info.WhiteLotus24@gmail.com?Subject=Inquary purpose"enctype="text/plain"><!--"multipart/form-data"-->
                         <div class="form-group">
                             <p>Your Name:</p>
                           <div class="col-sm-12">
